# websites_environment_synth_data

./: .gitignore  README.md  pyproject.toml
seed_data/: company_organization.json  db_schema.sql  db_schema_mysql.sql  user_profile_template.json  work_event_template.json
tara/: __init__.py
tara/calendar_db_generator/: __init__.py  attendees_generator.py  personal_event_generator.py  pipeline.py  profile_generator.py  sql_generator.py  work_event_generator.py
tara/lib/: __init__.py  action.py  pipeline.py
tara/models/: __init__.py  calendar.py  personal_events.py  user_profile.py
tara/tests/: README.md  docker-compose.yml  run_tests.sh  test_calendar_pipeline.py  test_mysql_pipeline.py
